<resources>
    <string name="app_name">Cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome completo</string>
    <string name="sexo">Sexo</string>
    <string name="ingressar_na_lista_de_emails">Ingressar na lista de e-mails?</string>
    <string name="email">E-mail</string>
    <string name="ex_16_991209090">Ex: 16-991209090</string>
    <string name="telefone">Telefone</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="uf">UF</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="cidade">Cidade</string>

    <string-array name="uf_lista">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>
